--- a/src/components/settings/Settings.module.css
+++ b/src/components/settings/Settings.module.css
@@ -34,11 +34,24 @@
     color:white;
     background: rgba(126, 205, 224, 0);
     border: none;
+    border-radius: 16px;
+    transition: all ease-in 200ms;
 }
 
 .uploadButton:hover{
-    background: rgba(126, 205, 224, 0.3);
+    background: rgba(126, 205, 224, 1);
 }
+
+
+.uploadButton:focus{
+    outline: none;
+}
+
+.uploadButton:active{
+    background: var(--button-active);
+}
+
+
 
 .uploadButtonIcon{
     height:32px;
