--- a/src/res/theme/colors.css
+++ b/src/res/theme/colors.css
@@ -1,5 +1,6 @@
 :root{
     --color-primary: #7ecde0;
     --color-accent: #7EBFF7;
-    --color-primary-dark:#7999ED
+    --color-primary-dark:#7999ED;
+    --button-active: #649ac7;
 }
