--- a/src/App.module.css
+++ b/src/App.module.css
@@ -16,7 +16,7 @@ body {
     overflow: hidden;
 }
 
-.titleBar{
+.titleBar {
     grid-area: title;
     padding-left: 32px;
     padding-right: 32px;
@@ -37,30 +37,41 @@ body {
     color: white;
 }
 
-.buttonsSection{
+.buttonsSection {
     display: flex;
     flex-direction: row;
     align-content: center;
     grid-area: buttons;
 }
 
-.boardTitle{
+.boardTitle {
     grid-area: title;
 }
 
 
-.boardTitleWrapper{
+.boardTitleWrapper {
     border-bottom: #424242 0.5px solid;
     grid-area: board-title;
     margin-left: 16px;
-    padding-left: 18px;
     display: grid;
     grid-template-areas: "title edit";
-    grid-template-columns:auto 48px ;
+    grid-template-columns: auto 48px;
+    grid-column: 1/3;
+    max-width: 100%;
+    width: fit-content;
 }
 
+.boardTitle{
+    padding:0 18px;
+    text-overflow: ellipsis;
+    height: 100%;
+    max-width: 100%;
+    overflow: hidden;
+    white-space: nowrap;
+    margin-right: 24px;
+}
 
-.editBoardTitleButton{
+.editBoardTitleButton {
     visibility: hidden;
     border: none;
     border-radius: 100px;
@@ -71,34 +82,41 @@ body {
     transition: 300ms linear all;
 }
 
-.editBoardTitleButton:focus{
+.editBoardTitleButton:focus {
     outline: none;
 }
 
-.editBoardTitleButtonIcon{
+.editBoardTitleButtonIcon {
     height: 32px;
-    width:32px;
+    width: 32px;
 }
 
-.boardTitleWrapper:hover > .editBoardTitleButton{
+.boardTitleWrapper:hover > .editBoardTitleButton {
     visibility: visible;
 }
 
-.editBoardTitleButton:hover{
+.editBoardTitleButton:hover {
     background: rgba(126, 205, 224, 0.4);
 }
 
-.lists{
+.lists {
     display: flex;
     padding: 0 56px 64px;
     grid-area: list;
     overflow-x: auto;
 }
 
-.list:not(:last-of-type){
+.list:not(:last-of-type) {
     margin-right: 64px;
 }
 
-.list:last-of-type{
-   border-right: 56px solid rgba(0,0,0,0);
+.list:last-of-type {
+    border-right: 56px solid rgba(0, 0, 0, 0);
+}
+
+.editTitle {
+    background: transparent;
+    outline: none;
+    border:var(--color-primary) 2px solid;
+    grid-column: 1/3;
 }
