--- a/src/res/theme/typography.module.css
+++ b/src/res/theme/typography.module.css
@@ -9,6 +9,12 @@ h2{
     margin: 0;
 }
 
+.h2{
+    font-family: "Playball", serif ;
+    font-size: 36px;
+    margin: 0;
+}
+
 h3{
     font-family: "Ledger", serif;
     font-size: 24px;
