--- a/src/components/list/List.module.css
+++ b/src/components/list/List.module.css
@@ -16,6 +16,12 @@
     padding: 18px 0;
 }
 
+.editTitle {
+    background: transparent;
+    outline: none;
+    border:var(--color-primary) 2px solid;
+    grid-column: 1/3;
+}
 
 .listTitle {
     margin-left: 24px;
