--- a/src/components/list/List.module.css
+++ b/src/components/list/List.module.css
@@ -1,7 +1,7 @@
 .list {
     display: flex;
     height: 100%;
-    min-width: 288px;
+    width: 288px;
     flex-direction: column;
 }
 
@@ -25,6 +25,9 @@
 
 .listTitle {
     margin-left: 24px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .listTitleEditButton {
