--- a/src/components/list/List.module.css
+++ b/src/components/list/List.module.css
@@ -21,6 +21,8 @@
     outline: none;
     border:var(--color-primary) 2px solid;
     grid-column: 1/3;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 .listTitle {
