--- a/src/components/ContextMenu/ContextMenu.module.css
+++ b/src/components/ContextMenu/ContextMenu.module.css
@@ -1,26 +1,35 @@
 .contextMenuContainer {
     height: 10vh;
-    width: 20vw;
+    width: 10vw;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
     position: fixed;
+
 }
 
-.contextMenuButton{
+.contextMenuButton {
     width: 100%;
-    height:40%;
-    background:white;
+    height: 40%;
+    background: white;
     border-radius: 4px;
     color: var(--color-accent);
     display: flex;
     justify-content: flex-start;
     padding: 2px 8px;
     align-items: center;
+    border: none;
+    box-shadow: #424242 2px 1px 4px;
 }
 
-.contextMenuButtonIcon{
+.contextMenuButton:focus {
+    outline: none;
+}
+
+.contextMenuButtonIcon {
     fill: var(--color-accent);
     margin-right: 8px;
+    height: 24px;
+    width: 24px;
 }
