Align context menu

--- a/src/components/ContextMenu/ContextMenu.module.css
+++ b/src/components/ContextMenu/ContextMenu.module.css
@@ -1,4 +1,6 @@
 .contextMenuContainer {
+
+    /*Height is also computed in List.tst `computeContextMenuPositionAndDisplay`. Also change there if changed here */
     height: 10vh;
     width: 10vw;
     display: flex;
