--- a/src/components/settings/Settings.module.css
+++ b/src/components/settings/Settings.module.css
@@ -2,7 +2,9 @@
     display: flex;
     flex-direction: column;
     padding: 24px;
-    background-color: var(--color-accent, cornflowerblue);
+    background: rgba(126,191,247,0.8);
+    -webkit-backdrop-filter: blur(8px);
+    backdrop-filter: blur(8px);
     position: absolute;
     top:64px;
     transform:translateX(-90%);
